(dirs src tools client gen assets static local)

;(rule
; (target h42n42_i18n.eliom)
; (deps assets/h42n42_i18n.tsv)
; (action
;  (with-stdout-to
;   %{target}
;   (with-stdin-from
;    %{deps}
;    (pipe-stdout
;     (run
;      ocsigen-i18n-generator
;      --languages
;      en,fr
;      --default-language
;      fr
;      %{deps})
;     (run
;      sed
;      "1 s/]/[@@deriving json]]\\n[%%shared [@@@ocaml.warning\"-27\"]]/"))))))

(subdir
 gen
 (rule
  (deps ../tools/gen_dune.ml)
  (action
   (with-stdout-to
    dune.client
    (run ocaml ../tools/gen_dune.ml)))))

(subdir
 client
 (executables
  (names h42n42)
  (modes js byte)
  (preprocess
   (pps
    js_of_ocaml-ppx
    lwt_ppx
    ;    ocsigen-i18n
    ;    --
    ;    --prefix
    ;    H42n42_
    ;    --suffix
    ;    _i18n
    ;    --default-module
    ;    H42n42_i18n
    ))
  (js_of_ocaml
   (build_runtime_flags :standard --enable use-js-string)
   (flags
    :standard
    --enable
    with-js-error
    --enable
    use-js-string
    --no-source-map))
  ; source maps are slow...
  (libraries eliom.client js_of_ocaml-lwt))
 (dynamic_include ../gen/dune.client))

; Main rule:

(rule
 (alias h42n42)
 (deps
  src/h42n42.cma
  src/h42n42_main.bc
  src/h42n42_main.exe
  client/h42n42.bc
  client/h42n42.bc.js
  tools/check_modules.ml)
 (action
  (run ocaml -I +unix -I +str tools/check_modules.ml h42n42)))
