(library
 (name h42n42)
 (modules
  (:standard \ H42n42_main))
 (libraries eliom.server ocsipersist-sqlite ocsipersist-sqlite.settings)
 (library_flags
  (:standard -linkall))
 (wrapped false)
 (preprocess
  (pps
   lwt_ppx
   ;   pgocaml_ppx
   js_of_ocaml-ppx_deriving_json
   ;   ocsigen-i18n
   ocsigen-ppx-rpc
   eliom.ppx.server
   --
   --rpc-raw
   ;   --prefix
   ;   H42n42_
   ;   --suffix
   ;   _i18n
   ;   --default-module
   ;   H42n42_i18n
   )))

(executables
 (names h42n42_main)
 (public_names h42n42)
 (modes
  (byte exe)
  (native exe))
 (libraries
  eliom.server
  ocsipersist-sqlite
  ocsigenserver.ext.staticmod
  h42n42)
 (modules H42n42_main)
 (preprocess
  (pps
   lwt_ppx
   ;   pgocaml_ppx
   js_of_ocaml-ppx_deriving_json
   ;   ocsigen-i18n
   ocsigen-ppx-rpc
   eliom.ppx.server
   ;   --
   ;   --prefix
   ;   H42n42_
   ;   --suffix
   ;   _i18n
   ;   --default-module
   ;   H42n42_i18n
   )))
